[gd_scene load_steps=2 format=3 uid="uid://c1ssyidvh4mgw"]

[ext_resource type="Script" path="res://ui/story_card_display.gd" id="1_21ck1"]

[node name="StoryEventDisplay" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21ck1")

[node name="StoryText" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "Story Text"
vertical_alignment = 1
autowrap_mode = 2

[node name="BottomPortion" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPortion"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EffectsBox" type="VBoxContainer" parent="BottomPortion/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6

[node name="OptionsBox" type="VBoxContainer" parent="BottomPortion/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
